<resources>
    <string name="app_name">腕上哔哩</string>
    <string name="app_package">cn.luern0313.wristbilibili</string>

    <string name="update">
        <![CDATA[
        v3.1<br>优化：<br>优化图片显示速度<br>优化评论区个人/企业认证的显示<br>优化视障人士使用体验<br><br>修复：<br>修复无法回复楼中楼的问题<br>修复查看转发被删除动态时闪退的问题<br>修复无法使用密码登录的问题<br>修复其他问题<br><br>v3.0<br>新增：<br>支持更多动态卡片<br>专栏<br>历史记录<br>视频一键三连<br>动态详情<br>支持更多用户详情界面的tab，如投稿、收藏和追番等<br>评论和动态中表情、@、话题、url等的显示和点击<br>暂未支持内容或网页的默认页面<br><br>优化：<br>优化评论区显示，支持评论排序，置顶评论等<br>图片页显示图片编号<br>单集番剧/影视视频页的跳转<br>优化应用图标<br>优化动态行数过多文本折叠的逻辑<br><br>修复：<br>修复密码登录不能使用的问题<br>修复有收藏夹为空时查看收藏闪退的问题<br>修复评论为空时不能发评论的问题<br>修复转发动态有时错误的问题<br><br>v2.6<br>新增：<br>全站排行榜、每日pick up视频<br>视频个人定制推荐<br>番剧和影视详情页面、评论页面、相关推荐页面<br>搜索支持搜索番剧/影视、up主<br>增加账号密码登录<br><br>优化：<br>缓存视频显示本地封面<br>优化视频详情页进入速度<br>优化收藏视频、相关视频等页面布局<br>优化代码结构<br><br>修复：<br>修复缓存视频时弹幕和封面没有正确下载的错误<br>其他布局或代码错误<br><br>v2.3<br>优化：<br>优化一些视频不稳定需要重新进入才能观看的问题（之后更新腕上视频生效）<br>修复：<br>修复查看收藏夹为空的问题<br>修复在用户页转发动态无反应的问题<br><br>v2.2<br>新增：<br>下载视频<br>发动态以及转发他人动态和视频<br>完全自定义的小尾巴<br>可以查看自己和他人的关注和粉丝<br><br>优化：<br>优化视频播放逻辑<br>评论和发动态中语音识别后会插入之前的内容中，不会替换掉之前的内容<br><br>修复<br>修复因接口关闭不能看视频的问题<br>修复查看自己和他人动态时，加载历史动态时动态会重复的问题<br>修复搜索时偶尔会内存溢出的问题<br><br>v2.0<br>新增：<br>视频详情中查看视频分P<br>点击视频详情中的分P或者播放打开腕上视频播放视频<br><br>优化：<br>查看评论界面中无评论时也显示发送评论按钮<br>优化评论小尾巴可以选择是否加上作者信息<br><br>修复：<br>修复进入收藏夹仍有可能闪退的bug....<br>修复查看图片由于可能图片过大导致的内存溢出<br>修复查看用户的动态无法评论的问题<br>修复用户登录信息过期后应用无法打开菜单的问题<br><br><br>v1.4<br>我保证下一次更新播放视频。。。。<br><br>新增：<br>动态可以点赞、查看评论和评论<br>视频详情界面左右划显示评论和相关推荐<br>点击评论的评论键显示楼中楼<br>用户界面左右划显示该用户动态<br>评论可用语音识别输入<br>评论支持插入小尾巴<br>搜索界面可用语音识别输入<br>搜索界面显示当前热门搜索<br>增加查看图片的缩放功能<br><br>优化：<br>收藏夹标题超过一行用省略号表示<br>用户界面本人不显示关注按钮<br><br>修复：<br>修复动态用户头像过大内存溢出问题<br><br><br>v1.1<br>修复一批重大bug
        ]]>
    </string>

    <string name="open_source_github">本应用在github开源，欢迎star~~\nhttps://github.com/luern0313/WristBilibili</string>
    <string name="open_source_other">--------------------------\n本应用使用了以下开源库，向这些开源库的作者致以敬意！\n--------------------------\nCircleImageView\nhdodenhof\nApache License 2.0\nhttps://github.com/hdodenhof/CircleImageView\n--------------------------\nExpandableTextView\nCarbs0126\nApache License 2.0\nhttps://github.com/Carbs0126/ExpandableTextView\n--------------------------\nWaveSwipeRefreshLayout\nrecruit-lifestyle\nApache License 2.0\nhttps://github.com/recruit-lifestyle/WaveSwipeRefreshLayout\n--------------------------\nsketch\npanpf\nApache License 2.0\nhttps://github.com/panpf/sketch\n--------------------------\nokhttp\nsquare\nApache License 2.0\nhttps://github.com/square/okhttp\n--------------------------\nFileDownloader\nlingochamp\nApache License 2.0\nhttps://github.com/lingochamp/FileDownloader\n--------------------------\nHtmlTextView\nSufficientlySecure\nApache License 2.0\nhttps://github.com/SufficientlySecure/html-textview\n--------------------------\nEventBus\ngreenrobot\nApache License 2.0\nhttps://github.com/greenrobot/EventBus\n--------------------------\nCircleProgressView\njenly1314\nMIT License\nhttps://github.com/jenly1314/CircleProgressView\n--------------------------\nLombok\nrzwitserloot\nMIT License\nhttps://github.com/rzwitserloot/lombok\n--------------------------\nfastjson\nalibaba\nApache License 2.0\nhttps://github.com/alibaba/fastjson\n--------------------------\nmaterial-design-icons\ngoogle\nApache License 2.0\nhttps://github.com/google/material-design-icons\n--------------------------\n</string>

    <string name="main_tip_no_data">什么都没找到…</string>
    <string name="main_tip_no_web">好像没有网络…\n检查下网络？</string>
    <string name="main_tip_no_login">你好像还没有登录…\n点上面的按钮试试吧</string>
    <string name="main_tip_no_more_web">好像没有网络…\n检查下网络？</string>
    <string name="main_tip_no_more_data">&#160;&#160;没有更多了…</string>
    <string name="main_tip_no_more_data_loading">&#160;加载中…</string>
    <string name="main_error_web">操作失败，请检查网络</string>
    <string name="main_error_unknown">未知错误</string>
    
    <string name="time_0">今天 %s</string>
    <string name="time_1">昨天 %s</string>
    <string name="time_2">前天 %s</string>

    <string name="menu_dynamic">动态</string>
    <string name="menu_recommend">推荐</string>
    <string name="menu_ranking">排行榜</string>
    <string name="menu_remind">追番提醒</string>
    <string name="menu_download">离线缓存</string>
    <string name="menu_search">搜索</string>
    <string name="menu_collect">收藏</string>
    <string name="menu_watchlater">稍后再看</string>
    <string name="menu_history">历史记录</string>
    <string name="menu_setting">设置</string>

    <string name="user_card_lv">LV%d</string>
    <string name="user_follow_follow">+关注</string>
    <string name="user_follow_follow_toast">关注成功！</string>
    <string name="user_follow_cancel">已关注</string>
    <string name="user_follow_cancel_toast">取消关注成功</string>
    <string name="user_card_video_num">投稿：%s</string>
    <string name="user_card_favor_num">收藏：%s</string>
    <string name="user_card_bangumi_num">追番：%s</string>
    <string name="user_card_follow_num">关注：%s</string>
    <string name="user_card_fans_num">粉丝：%s</string>

    <string name="dynamic_album_author">\@%s</string>
    <string name="dynamic_text_author">\@%s</string>
    <string name="dynamic_video_author"><![CDATA[<font color="#188ad0">%s</font>的投稿]]></string>
    <string name="dynamic_video_desc">%s&#160;&#160;&#160;%s播放&#160;&#160;%s弹幕</string>
    <string name="dynamic_article_author"><![CDATA[<font color="#188ad0">%s</font>的专栏]]></string>
    <string name="dynamic_article_view">阅读：%s</string>
    <string name="dynamic_bangumi_desc">%s播放&#160;&#160;%s弹幕</string>
    <string name="dynamic_url_author">\@%s</string>
    <string name="dynamic_live_author"><![CDATA[<font color="#188ad0">%s</font>的直播间]]></string>
    <string name="dynamic_favor_author"><![CDATA[<font color="#188ad0">%s</font>的收藏夹]]></string>
    <string name="dynamic_live_status_1">直播中</string>
    <string name="dynamic_live_status_2">未开播</string>
    <string name="dynamic_favor_desc">%d个内容</string>
    <string name="dynamic_unknown_tips">暂不支持该类型动态…</string>

    <string name="title_activity_listview">ExpandableTextView in ListView</string>
    <string name="title_activity_main">ExpandableTextView</string>
    <string name="to_expand_hint">展开</string>
    <string name="to_shrink_hint">收起</string>

    <string name="ranking_score">综合得分：%s</string>

    <string name="animation_timeline_update">更新至%s</string>
    <string name="animation_timeline_date">%s %s</string>

    <string name="reply_toolbar_send">发送回复</string>
    <string name="reply_toolbar_total_reply">共%s条回复</string>
    <string name="reply_toolbar_total_comment">共%s条评论</string>
    
    <string name="reply_description_head">用户头像</string>
    <string name="reply_description_off_1">个人认证</string>
    <string name="reply_description_off_2">企业认证</string>
    <string name="reply_sore_sign_hot">热门评论</string>
    <string name="reply_sore_sign_time">最新评论</string>
    <string name="reply_sore_change">切换</string>
    <string name="reply_description_report">举报</string>
    <string name="reply_description_reply">评论</string>
    <string name="reply_description_dislike">点踩</string>
    <string name="reply_description_like">点赞</string>
    <string name="reply_lv">LV%s</string>
    <string name="reply_like_up">UP主觉得很赞</string>
    <string name="reply_report_warning">该评论可能存在引战谩骂、人身攻击等行为，请勿对骂，善用举报，点击这里查看详情</string>
    <string name="reply_reply_template">回复 @%s :</string>

    <string name="favor_box_see_private">私有</string>
    <string name="favor_box_see_public">公开</string>
    <string name="favor_box_count">%s个视频</string>
    <string name="favor_box_article">专栏收藏夹</string>
    <string name="favor_box_album">相簿收藏夹</string>

    <string name="favor_video_delete_message">你确定要取消收藏这个视频吗？</string>
    <string name="favor_video_delete_cancel">取消</string>
    <string name="favor_video_delete_ok">确定</string>
    <string name="favor_video_delete_done">取消收藏完成</string>

    <string name="favor_article_delete_message">你确定要取消收藏这篇专栏吗？</string>
    <string name="favor_article_delete_cancel">取消</string>
    <string name="favor_article_delete_ok">确定</string>
    <string name="favor_article_delete_done">取消收藏完成</string>

    <string name="download_mode_1">正在下载</string>
    <string name="download_mode_2">下载完成</string>
    <string name="download_tip">视频储存位置：%s\n\n点击暂停或开始，长按删除本地文件。\n\n创建任务后时间过长链接会失效，请尝试删除后重新下载。</string>
    <string name="download_size">%s/s</string>
    <string name="download_size_unknown">未知</string>
    <string name="download_progress">%d%%</string>
    <string name="download_speed_zero">0.0B/s</string>
    <string name="download_state_0">连接中…</string>
    <string name="download_state_2">暂停中…</string>
    <string name="download_state_3">暂停</string>

    <string name="video_detail_av">AV%s</string>
    <string name="video_part_label">共%dP</string>
    <string name="video_part_more">查看全部></string>
    <string name="video_control_cover">查看封面</string>
    <string name="video_control_play">点击播放</string>
    <string name="video_control_watchlater">稍后再看</string>
    <string name="video_control_download">缓存视频</string>
    <string name="video_control_history">历史记录</string>
    <string name="video_control_share">转发视频</string>
    <string name="video_control_like">好评</string>
    <string name="video_control_coin">投币</string>
    <string name="video_control_fav">收藏</string>
    <string name="video_control_dislike">差评</string>
    <string name="video_card_fans">粉丝：%s</string>
    <string name="video_card_follow">+关注</string>

    <string name="bangumi_title_detail">%s详情</string>
    <string name="bangumi_title_reply">单%s评论</string>
    <string name="bangumi_detail_more">查看详情 ></string>
    <string name="bangumi_control_follow_unfollow">已%s</string>
    <string name="bangumi_control_cover">查看封面</string>
    <string name="bangumi_control_download_allow">缓存</string>
    <string name="bangumi_control_download_notallow">版权受限</string>
    <string name="bangumi_control_share">转发</string>
    <string name="bangumi_episodes_title">正片-共%d%s</string>
    <string name="bangumi_download_title">分集下载</string>
    <string name="bangumi_download_tip">选择要下载的分集</string>
    <string name="bangumi_download_notallow">抱歉，该%s只可在线观看</string>

    <string name="article_id">CV%s</string>
    <string name="article_view">%s观看</string>
    <string name="article_fans">粉丝：%s</string>
    <string name="article_card_ticket_location">%1$s %2$s</string>
    <string name="article_card_live_status_off">未开播</string>
    <string name="article_card_live_status_on">直播中</string>
    <string name="article_card_live_online_default">--</string>
    
    <string name="vip_annual">年度大会员</string>
    <string name="vip_normal">大会员</string>

    <string name="theme_name_pink">少女粉</string>
    <string name="theme_name_dark">黑暗模式</string>
    <string name="theme_name_black">纯黑</string>
    <string name="theme_name_blue">天依蓝</string>
    <string name="theme_name_green">初音绿</string>
    <string name="theme_name_red">网易红</string>

</resources>
