<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:descendantFocusability="blocksDescendants"
    android:focusable="true"
    android:paddingLeft="20dp"
    android:paddingTop="2dp"
    android:paddingRight="20dp"
    android:paddingBottom="4dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/item_reply_head"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/reply_description_head"
        android:src="@drawable/img_default_head" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/item_reply_off_1"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignEnd="@+id/item_reply_head"
        android:layout_alignBottom="@+id/item_reply_head"
        android:contentDescription="@string/reply_description_off_1"
        android:layout_marginEnd="-2dp"
        android:src="@drawable/icon_ou_ver_1" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/item_reply_off_2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignEnd="@+id/item_reply_head"
        android:layout_alignBottom="@+id/item_reply_head"
        android:contentDescription="@string/reply_description_off_2"
        android:layout_marginEnd="-2dp"
        android:src="@drawable/icon_ou_ver_2" />

    <LinearLayout
        android:id="@+id/item_reply_name_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/item_reply_head">

        <TextView
            android:id="@+id/item_reply_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/item_reply_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:background="@drawable/shape_bg_reply_up"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="UP"
            android:textColor="@color/white"
            android:textSize="10dp"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_reply_name_lay"
        android:layout_alignStart="@+id/item_reply_name_lay"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="4dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/item_reply_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/item_reply_floor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/item_reply_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/shape_lvbg_fme"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:textSize="8sp"
            android:textStyle="bold" />
    </LinearLayout>

    <cn.luern0313.wristbilibili.widget.ExpandableTextView
        android:id="@+id/item_reply_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_reply_head"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        app:etv_MaxLinesOnShrink="6" />

    <LinearLayout
        android:id="@+id/item_reply_reply_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_reply_text"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/layer_bg_reply_show"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/item_reply_reply_show_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/item_reply_reply_show_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/item_reply_reply_show_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/item_reply_reply_show_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/item_reply_up_like"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_reply_reply_show"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="2dp"
        android:background="@drawable/layer_bg_reply_up_like"
        android:drawablePadding="2dp"
        android:paddingStart="5dp"
        android:paddingTop="1px"
        android:paddingBottom="1px"
        android:text="@string/reply_like_up"
        android:textColor="@color/gray_44"
        android:textSize="11sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_reply_up_like"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:baselineAligned="false"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/item_reply_report"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:clickable="true"
            android:contentDescription="@string/reply_description_report"
            android:focusable="true"
            android:padding="4dp"
            android:src="@drawable/icon_report" />

        <ImageView
            android:id="@+id/item_reply_reply"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            android:src="@drawable/icon_reply"
            android:contentDescription="@string/reply_description_reply" />

        <ImageView
            android:id="@+id/item_reply_dislike"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            android:src="@drawable/icon_dislike"
            android:contentDescription="@string/reply_description_dislike" />

        <LinearLayout
            android:id="@+id/item_reply_like"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_reply_like_i"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_margin="4dp"
                android:src="@drawable/icon_like"
                android:contentDescription="@string/reply_description_like"  />

            <TextView
                android:id="@+id/item_reply_like_n"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_margin="1dp"
                android:gravity="center_vertical"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>