<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/fav_nologin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="33dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:padding="6dp"
            android:src="@drawable/img_nologin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tip_no_login"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fav_noweb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="33dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:padding="6dp"
            android:src="@drawable/img_noweb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tip_no_web"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fav_nonthing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="33dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="94dp"
            android:padding="6dp"
            android:src="@drawable/img_nodata" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tip_no_data" />

    </LinearLayout>

    <jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout
        android:id="@+id/fav_swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/fav_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:divider="@color/alpha"
            android:dividerHeight="1dp"
            android:paddingBottom="22dp" />
    </jp.co.recruit_lifestyle.android.widget.WaveSwipeRefreshLayout>


</RelativeLayout>