<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_reply"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:paddingStart="@dimen/dimen_20_10"
    android:paddingTop="2dp"
    android:paddingEnd="@dimen/dimen_20_10"
    android:paddingBottom="4dp"
    tools:ignore="SmallSp,UseCompoundDrawables">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/item_reply_head"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:clickable="true"
        android:contentDescription="@string/reply_description_head"
        android:focusable="true"
        android:src="@drawable/img_default_head" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/item_reply_off_1"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignEnd="@+id/item_reply_head"
        android:layout_alignBottom="@+id/item_reply_head"
        android:layout_marginEnd="-2dp"
        android:contentDescription="@string/reply_description_off_1"
        android:src="@drawable/icon_ou_ver_1" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/item_reply_off_2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignEnd="@+id/item_reply_head"
        android:layout_alignBottom="@+id/item_reply_head"
        android:layout_marginEnd="-2dp"
        android:contentDescription="@string/reply_description_off_2"
        android:src="@drawable/icon_ou_ver_2" />

    <LinearLayout
        android:id="@+id/item_reply_name_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/item_reply_head">

        <TextView
            android:id="@+id/item_reply_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="?attr/colorTitle"
            tools:text="UP name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_reply_name_lay"
        android:layout_alignStart="@+id/item_reply_name_lay"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="4dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/item_reply_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            tools:text="12:00" />

        <TextView
            android:id="@+id/item_reply_floor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="10sp"
            tools:text="2#" />

        <TextView
            android:id="@+id/item_reply_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/shape_bg_fme_lv"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:textColor="?attr/colorAccent"
            android:textSize="8sp"
            android:textStyle="bold"
            tools:text="LV5" />
    </LinearLayout>

    <cn.luern0313.wristbilibili.widget.ExpandableTextView
        android:id="@+id/item_reply_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_reply_head"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        app:etv_MaxLinesOnShrink="6" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_reply_text"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:baselineAligned="false"
        android:gravity="end">

        <TextView
            android:id="@+id/item_reply_tail_apply"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_centerVertical="true"
            android:background="@drawable/layer_bg_button_color"
            android:clickable="true"
            android:ellipsize="none"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:singleLine="true"
            android:text="@string/tail_reply_apply"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/item_reply_dislike"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_toStartOf="@id/item_reply_like"
            android:clickable="true"
            android:contentDescription="@string/reply_description_dislike"
            android:focusable="true"
            android:padding="4dp"
            android:src="@drawable/icon_dislike_no" />

        <LinearLayout
            android:id="@+id/item_reply_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_reply_like_i"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/reply_description_like"
                android:src="@drawable/icon_like_no" />

            <TextView
                android:id="@+id/item_reply_like_n"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_margin="1dp"
                android:gravity="center_vertical"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>